# foldefy-app

./: DOCUMENTATIE_SCRISA.md  foldefy-development-plan.md  foldefy-mvp-prompt.md  foldefy-prompt.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: with-msvc.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  folder.rs  mod.rs  models.rs  scanning.rs  sorting.rs  structure.rs  template.rs  user.rs
src-tauri/src/core/: mod.rs  secrets.rs
src-tauri/src/core/ai/: claude.rs  engine.rs  local.rs  mod.rs  prompts.rs  provider.rs
src-tauri/src/core/fs_ops/: create_tree.rs  mod.rs
src-tauri/src/core/hw/: mod.rs
src-tauri/src/core/models_mgr/: mod.rs  models.json
src-tauri/src/core/scanner/: hotspots.rs  mod.rs  project_detect.rs  skip_rules.rs
src-tauri/src/core/sorter/: classifier.rs  executor.rs  guards.rs  journal.rs  mod.rs  planner.rs  undo.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql
src-tauri/src/models/: ai.rs  folder.rs  hardware.rs  mod.rs  scanning.rs  sorting.rs  template.rs  user.rs
src/components/ai/: AIRecommendation.tsx  ApplyStructureDialog.tsx  RecommendationLoader.tsx  RecommendedStructureTree.tsx
src/components/folder-tree/: FolderAnnotation.tsx  FolderNode.tsx  FolderStats.tsx  FolderTree.tsx
src/i18n/: index.ts
src/lib/: tauri.ts
src/pages/: Dashboard.tsx  FolderExplorer.tsx  Marketplace.tsx  Organize.tsx  Settings.tsx
src/stores/: aiStore.ts  appStore.ts  folderStore.ts  modelStore.ts  scanStore.ts  sortStore.ts  templateStore.ts  userStore.ts
(+33 files in other folders)
