[package]
name = "foldefy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Vulkan GPU acceleration for the local AI engine. CI builds CPU-only
# (no Vulkan SDK on runners); release/dev builds keep it on.
default = ["vulkan"]
vulkan = ["llama-cpp-2/vulkan"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "foldefy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
keyring = { version = "3", features = ["windows-native"] }
ash = "0.38"
sha2 = "0.10"
futures-util = "0.3"
async-trait = "0.1"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi", "Win32_Foundation", "Win32_Storage_FileSystem"] }
